2007-08-20  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (FieldSpec.__init__): New argument
	'inherit' to allow inheritance.

	* pytis/util/configuration.py
	(Configuration.dump_config_template): Wrong argument name fixed.

	* pytis/form/inputfield.py: Handle invalid default values of
	enumeration fields.

2007-08-20  Pavel Hanak  <hanak@alfik.akont.xx>

	* pytis/data/postgresql.py (DBPostgreSQLFunction.call): Restore
	previous behavior (do not backup function calls).

	* pytis/data/postgresql.py (DBPostgreSQLFunction.call): Do backup
	also for function calls.

2007-08-17  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/inputfield.py: Display a fake value in password
	fields if the password was defined.

	* pytis/web/form.py: Major refactoring.  Added support for
	browsing long lists and sorting.

2007-08-16  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (FieldSpec): Pass the 'minlen'
	argument to data type.

	* pytis/form/inputfield.py (PasswordField): New class.

	* pytis/data/_test.py: New tests for type 'Password' and 'minlen'.

	* pytis/data/types_.py (Limited): Added support for 'minlen' limit.
	(Password): Added support for md5 passwords.
	(TreeOrder): New type.

2007-08-13  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/search.py: Don't allow aggregation functions on
	non-numeric data types.

2007-08-10  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py: Respect the changes in 'Configuration'
	class interface.

	* pytis/form/configui.py: Respect the changes in 'Configuration'
	class interface.

	* pytis/util/configuration.py: Respect the order of configuration
	option definitions.  Allow direct access to option instances.
	(description, documentation, type, changed): Methods removed.

	* pytis/presentation/spec.py (FieldSpec.__init__): Added `unique'
	to the list of allowed data type kwargs.

2007-08-07  Tomas Cerha  <cerha@brailcom.org>

	* pytis/util/configuration.py: Allow separate access to each